--- a/LabSheet7/LabSheet7/MainWindow.xaml
+++ b/LabSheet7/LabSheet7/MainWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LabSheet7"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
-        
+        <ListBox x:Name="_txListExpenses" HorizontalAlignment="Left" Height="241" Margin="192,77,0,0" VerticalAlignment="Top" Width="514"/>
+        <Button x:Name="txbtnAdd" Content="Add Expenses" HorizontalAlignment="Left" Margin="192,369,0,0" VerticalAlignment="Top" Width="88" Click="txbtnAdd_Click"/>
+        <Label Content="Total Expenses" HorizontalAlignment="Left" Margin="524,369,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.263,-0.423" Width="92"/>
+        <TextBlock x:Name="txblkTotal" HorizontalAlignment="Left" Margin="633,369,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="73"/>
+
     </Grid>
 </Window>
